Create CollisionDraw for VertexDraw

--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CollisionDraw\CollisionDraw.csproj" />
     <ProjectReference Include="..\GraphModelDraw\GraphModelDraw.csproj" />
   </ItemGroup>
 
