--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\CollisionDraw\CollisionDraw.csproj" />
     <ProjectReference Include="..\CraphModel\CraphModel.csproj" />
     <ProjectReference Include="..\GraphModelDraw\GraphModelDraw.csproj" />
+    <ProjectReference Include="..\Serializing\Serializing.csproj" />
   </ItemGroup>
 
 </Project>
