--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -9,8 +9,8 @@
   <ItemGroup>
     <ProjectReference Include="..\CollisionDraw\CollisionDraw.csproj" />
     <ProjectReference Include="..\CraphModel\CraphModel.csproj" />
+    <ProjectReference Include="..\DataProcessing\Serializing.csproj" />
     <ProjectReference Include="..\GraphModelDraw\GraphModelDraw.csproj" />
-    <ProjectReference Include="..\Serializing\Serializing.csproj" />
   </ItemGroup>
 
 </Project>
