--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\CraphModel\CraphModel.csproj" />
     <ProjectReference Include="..\DataProcessing\Serializing.csproj" />
     <ProjectReference Include="..\GraphModelDraw\GraphModelDraw.csproj" />
+    <ProjectReference Include="..\VertexSearch\VertexSearch.csproj" />
   </ItemGroup>
 
 </Project>
