--- a/VertexSearch/VertexSearch.csproj
+++ b/VertexSearch/VertexSearch.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GraphModelDraw\GraphModelDraw.csproj" />
+  </ItemGroup>
+
 </Project>
