--- a/GraphRepresentationTest/GraphRepresentationTest.csproj
+++ b/GraphRepresentationTest/GraphRepresentationTest.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CraphModel\CraphModel.csproj" />
     <ProjectReference Include="..\GraphRepresentation\GraphRepresentation.csproj" />
   </ItemGroup>
 
