--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CollisionDraw\CollisionDraw.csproj" />
-    <ProjectReference Include="..\CraphModel\CraphModel.csproj" />
+    <ProjectReference Include="..\CraphModel\GraphModel.csproj" />
     <ProjectReference Include="..\DataProcessing\Serializing.csproj" />
     <ProjectReference Include="..\EdgeDraw\ArrowDraw.csproj" />
     <ProjectReference Include="..\GraphModelDraw\GraphModelDraw.csproj" />
