--- a/DataProcessing/Serializing.csproj
+++ b/DataProcessing/Serializing.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CraphModel\CraphModel.csproj" />
+    <ProjectReference Include="..\CraphModel\GraphModel.csproj" />
   </ItemGroup>
 
 </Project>
