--- a/GraphRepresentation/GraphRepresentation.csproj
+++ b/GraphRepresentation/GraphRepresentation.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CraphModel\CraphModel.csproj" />
+    <ProjectReference Include="..\CraphModel\GraphModel.csproj" />
     <ProjectReference Include="..\GraphModelDraw\GraphModelDraw.csproj" />
   </ItemGroup>
 
