--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CraphModel\GraphModel.csproj" />
     <ProjectReference Include="..\GraphRepresentation\GraphRepresentation.csproj" />
   </ItemGroup>
 
